# os_big_work

./: .gitignore  [linux]一键pull-add-commit-push.sh  [windows]一键pull-add-commit-push.bat  linux_一键pull-add-commit-push.sh  os.tex  sybg.tex  target.txt
_minted-os/: 0215D00FF5BBD96E55FF7E70A6FEC47F17EEBE089857729EE23E659C277FBC63.pygtex  0E444A6CB00D7F8289A47CA4A5C962F317EEBE089857729EE23E659C277FBC63.pygtex  52D49920E77EE828765242CC7ADABE0917EEBE089857729EE23E659C277FBC63.pygtex  77A989DDC0C672924D9E9A1ED87A4BD917EEBE089857729EE23E659C277FBC63.pygtex  7B47CE4AFD4822DC7B2EB43149F5D47E17EEBE089857729EE23E659C277FBC63.pygtex  978934BB8ABB518B63CFC86F0965402417EEBE089857729EE23E659C277FBC63.pygtex  A4A9137F3CFFF4434880A86A0420697017EEBE089857729EE23E659C277FBC63.pygtex  B005AA20F4ED49366F6D87AB5FC2746817EEBE089857729EE23E659C277FBC63.pygtex  B4FA38B030183DF07D108CD39F80A63417EEBE089857729EE23E659C277FBC63.pygtex  B50823AC768399B8C4448DFE08E71ABB17EEBE089857729EE23E659C277FBC63.pygtex  C6EE7DE456CE1E6C075768F61DC3B21617EEBE089857729EE23E659C277FBC63.pygtex  D4BAE69CC6839CB53B621364190A130417EEBE089857729EE23E659C277FBC63.pygtex  DCAFC32770C30ACFAB8D4EA0FA43FFFF17EEBE089857729EE23E659C277FBC63.pygtex
code/: README.md  download.py  pyproject.toml  test.py  train.py  validation.py
code/backend/: app.py  test_post.py
code/frontend/: index.html
code/frontend/static/: style.css
